--- a/docs_doxygen/latex/classknn_classification.tex
+++ b/docs_doxygen/latex/classknn_classification.tex
@@ -125,11 +125,11 @@ Implements \hyperlink{classbase_model_a5d6b7579536f5713eed0b7b4a6687a16}{base\+M
 
 Generate an output value from a single input vector. 
 \begin{DoxyParams}{Parameters}
-{\em A} & standard vector of doubles that feed-\/forward regression will run on. \\
+{\em A} & standard vector of doubles to be evaluated. \\
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-A single double, which is the result of the feed-\/forward operation 
+A single double\+: the nearest class as determined by k-\/nearest neighbor. 
 \end{DoxyReturn}
 
 
